# RecursionSafe.py

./: .gitlab-ci.yml  ReadMe.md  RecursionSafe.py  pyproject.toml
tests/: tests.py
