[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "RecursionSafe"
readme = "ReadMe.md"
description = "Prevents recursive functions walking collections from infinite looping."
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["collection", "looping", "recursion"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-libs/RecursionSafe.py"

[tool.setuptools]
zip-safe = true
include-package-data = true
py-modules = ["RecursionSafe"]

[tool.setuptools_scm]
